--- a/coverage.gradle
+++ b/coverage.gradle
@@ -1,5 +1,8 @@
+import org.slf4j.Logger
+
+import static org.slf4j.LoggerFactory.getLogger
+
 apply plugin: 'jacoco'
-//apply plugin: "com.github.kt3k.coveralls"
 
 ext {
     limits = [
@@ -24,31 +27,79 @@ jacocoTestReport {
 
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
-            fileTree(dir: it, exclude: ['**/Demo**'])
+            fileTree(dir: it, exclude: ['**/Application**'])
         })
     }
 
     doLast {
-        def report = file("${jacoco.reportsDir}/test/jacocoTestReport.xml")
-        def htmlReport = file("${jacoco.reportsDir}/test/html/index.html")
-        logger.lifecycle("Checking coverage results: ${report}")
-        logger.lifecycle("Html report: ${htmlReport}")
+        new CodeCoverage(jacoco).check(limits)
+    }
+}
 
+check.dependsOn jacocoTestReport
+
+class CodeCoverage {
+    private static Logger LOGGER = getLogger(CodeCoverage.class);
+    def xmlReport
+    def htmlReport
+    def metrics
+
+    CodeCoverage(jacoco) {
+        xmlReport = new File("${jacoco.reportsDir}/test/jacocoTestReport.xml")
+        htmlReport = new File("${jacoco.reportsDir}/test/html/index.html")
+        initMetrics()
+    }
+
+    void check(limits) {
+        LOGGER.lifecycle("Checking coverage results: ${xmlReport}")
+        LOGGER.lifecycle("Html report: ${htmlReport}")
+        showResult checkMetrics(limits)
+    }
+
+    private void showResult(failures, improvements) {
+        if (failures) {
+            LOGGER.quiet("--------------------- Jacoco Code Coverage Failed ---------------------")
+            failures.each {
+                LOGGER.quiet(it)
+            }
+            LOGGER.quiet("-----------------------------------------------------------------------")
+            throw new GradleException("Jacoco Code coverage failed")
+        }
+        if (improvements) {
+            LOGGER.quiet("-------------------- Jacoco Code Coverage Improved --------------------")
+            improvements.each {
+                LOGGER.quiet(it)
+            }
+            LOGGER.quiet("-----------------------------------------------------------------------")
+        }
+    }
+
+    private List checkMetrics(limits) {
+        def failures = []
+        def improvements = []
+        metrics.each { key, value ->
+            def limit = limits[key] as Double
+            if (value < limit) {
+                failures.add("- ${key} coverage rate is: ${value}%, minimum is ${limit}%")
+            }
+            if (value > limit + 1) {
+                improvements.add("- $key coverage rate is: ${value}%, minimum is ${limit}%")
+            }
+        }
+        [failures, improvements]
+    }
+
+    private void initMetrics() {
         def parser = new XmlParser()
         parser.setFeature("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
         parser.setFeature("http://apache.org/xml/features/disallow-doctype-decl", false)
-        def results = parser.parse(report)
-
+        def counters = parser.parse(xmlReport).counter
         def percentage = {
-            if (it) {
-                def covered = it.'@covered' as Double
-                def missed = it.'@missed' as Double
-                ((covered / (covered + missed)) * 100).round(2)
-            }
+            def covered = it ? it.'@covered' as Double : 0
+            def missed = it ? it.'@missed' as Double : 0
+            ((covered / (covered + missed)) * 100).round(2)
         }
-
-        def counters = results.counter
-        def metrics = [:]
+        metrics = [:]
         metrics << [
                 'instruction': percentage(counters.find { it.'@type'.equals('INSTRUCTION') }),
                 'branch'     : percentage(counters.find { it.'@type'.equals('BRANCH') }),
@@ -57,38 +108,6 @@ jacocoTestReport {
                 'method'     : percentage(counters.find { it.'@type'.equals('METHOD') }),
                 'class'      : percentage(counters.find { it.'@type'.equals('CLASS') })
         ]
-
-
-        def failures = []
-        def canIncrease = []
-        metrics.each {
-            if(it.value) {
-                def limit = limits[it.key] as Double
-                if (it.value && it.value < limit) {
-                    failures.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
-                }
-                if (it.value > limit + 1) {
-                    canIncrease.add("- ${it.key} coverage rate is: ${it.value}%, minimum is ${limit}%")
-                }
-            }
-        }
-
-        if (failures) {
-            logger.quiet("------------------ Code Coverage Failed -----------------------")
-            failures.each {
-                logger.quiet(it)
-            }
-            logger.quiet("---------------------------------------------------------------")
-            throw new GradleException("Code coverage failed")
-        }
-        if (canIncrease) {
-            logger.quiet("------------------ Code Coverage Improved! -----------------------")
-            canIncrease.each {
-                logger.quiet(it)
-            }
-            logger.quiet("------------------------------------------------------------------")
-        }
     }
 }
 
-check.dependsOn jacocoTestReport
